# workshop-zephyr-device-driver

./: .gitignore  Dockerfile.espressif  README.md
.images/: esp32-s3-devkit-c-breadboard.fzz
scripts/: flash_ian.sh
workspace/apps/blink/: CMakeLists.txt
workspace/apps/read_temp/: CMakeLists.txt  prj.conf
workspace/apps/read_temp/boards/: esp32s3_devkitc.overlay
workspace/apps/read_temp/src/: main.c
workspace/apps/temp_test/: CMakeLists.txt  prj.conf
workspace/apps/temp_test/boards/: esp32s3_devkitc.overlay
workspace/apps/temp_test/src/: main.c
workspace/modules/: README.md
workspace/modules/mcp9808/: CMakeLists.txt
workspace/modules/mcp9808/drivers/mcp9808/: Kconfig  mcp9808.c  mcp9808.h
workspace/modules/mcp9808/drivers/sensor/: CMakeLists.txt
workspace/modules/mcp9808/drivers/sensor/mcp9808/: CMakeLists.txt  mcp9808.c  mcp9808.h
workspace/modules/mcp9808/dts/bindings/sensor/: microchip,mcp9808.yaml
